<?xml version="1.0"?>
<package format="3">
  <name>ros_opcua_communication</name>
  <version>0.2.0</version>
  <description>The ros_opcua_communication mate-package are ROS bidings for different open-source OPC-UA implementations. Currently following libraries are supported: FreeOpcUa and python-opcua.</description>

  <maintainer email="denis.stogl@kit.edu">Denis Štogl</maintainer>

  <license>LGPLv3</license>

  <url type="website">http://wiki.ros.org/ros_opcua_communication</url>
  <url type="repository">https://github.com/iirob/ros_opcua_communication</url>
  <url type="bugtracker">https://github.com/iirob/ros_opcua_communication/issues</url>

  <author email="denis.stogl@kit.edu">Denis Štogl</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>ros_opcua_msgs</depend>
  <depend>ros_opcua_srvs</depend>
  <depend>ros_opcua_impl_freeopcua</depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
  
</package>
